--- a/LeaRun/css/index.css
+++ b/LeaRun/css/index.css
@@ -110,6 +110,7 @@ a:hover,a:active,a:focus{outline:none;text-decoration:none;color:#72afd2}
 @media (max-width:767px){.navbar-nav>.user-menu .user-image{float:none;margin-right:0;margin-top:-8px;line-height:10px}}.open:not(.dropup)>.animated-dropdown-menu{backface-visibility:visible !important;-webkit-animation:flipInX .7s both;-o-animation:flipInX .7s both;animation:flipInX .7s both}
 
 .content-wrapper {margin-left: 230px;}
+@media (max-width:767px){.content-wrapper {margin-left: 0px;}}
 .content-wrapper .content-tabs{position:relative;height:41px;line-height:39.5px;background:#fafafa;border-bottom:solid 2px #222d32;font-size:12px;}
 .content-wrapper .content-tabs .roll-nav,.page-tabs-list{position:absolute;width:40px;height:39.5px;text-align:center;color:#475059;z-index:2;top:0}
 .content-wrapper .content-tabs .roll-left{left:0;border-right:solid 1px #ddd}
@@ -130,6 +131,7 @@ a:hover,a:active,a:focus{outline:none;text-decoration:none;color:#72afd2}
 .content-wrapper .content-tabs .roll-right.btn-group button{width:80px}
 .content-wrapper .content-tabs .roll-right.tabExit{background:#fff;height:39px;width:40px;outline:0}
 .content-wrapper .content-tabs .dropdown-menu{border:solid 1px #ccc;border-top-left-radius:0px;border-top-right-radius:0px;right:-1px;}
+
 
 
 
